YAMLs for Openshift/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-branch: master
    fabric8.io/git-commit: 728a0b0f7c23d78874a3235b391ba64f95742cde
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: >-
      https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/parent/backend
    prometheus.io/port: '9779'
    prometheus.io/scrape: 'true'
  labels:
    app: backend
    expose: 'true'
    group: com.mammutmkii.clcproject
    provider: fabric8
    version: 0.0.1-SNAPSHOT
  name: backend
  namespace: clcproject
spec:
  clusterIP: 172.30.96.238
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
    group: com.mammutmkii.clcproject
    provider: fabric8
  sessionAffinity: None
  type: ClusterIP
