YAMLs for Openshift/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    template.openshift.io/expose-uri: 'redis://{.spec.clusterIP}:{.spec.ports[?(.name=="redis")].port}'
  labels:
    app: redis-ephemeral
    template: redis-ephemeral-template
  name: redis-instance
  namespace: clcproject
spec:
  clusterIP: 172.30.213.111
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    name: redis-instance
  sessionAffinity: None
  type: ClusterIP
