YAMLs for Openshift/stock-polling-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: stock-polling
  name: stock-polling
  namespace: clcproject
