YAMLs for Openshift/stock-polling-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: stock-polling
  name: stock-polling
  namespace: clcproject
spec:
  clusterIP: 172.30.92.169
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: stock-polling
  sessionAffinity: None
  type: ClusterIP
