YAMLs for Openshift/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    app: backend
    expose: 'true'
    group: com.mammutmkii.clcproject
    provider: fabric8
    version: 0.0.1-SNAPSHOT
  name: backend
  namespace: clcproject
spec:
  host: backend-clcproject.193b.starter-ca-central-1.openshiftapps.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: backend
    weight: 100
  wildcardPolicy: None
